# CO-Paint-ugv-edge

./: readme.md
src/arduino_mecanum_bridge/: package.xml  setup.cfg  setup.py
src/arduino_mecanum_bridge/arduino_mecanum_bridge/: serial_bridge.py
src/arduino_mecanum_bridge/launch/: serial_bridge.launch.py
src/auto_landing/: package.xml  setup.py
src/auto_landing/auto_landing/: pid_align_landing_node.py  pid_landing_node.py  ugv_follow_node.py
src/cap_navigation/: CMakeLists.txt  package.xml
src/cap_navigation/launch/: nav.launch.py
src/cap_navigation/map/: kiss_map_1_fixed.pgm  kiss_map_1_fixed.yaml
src/cap_navigation/param/: nav_param.yaml
src/pcd_maps/: kiss_map_1.pcd  kiss_map_1.pgm  kiss_map_1.yaml
src/pcd_tools/: save_pcd_once.py
