<?xml version="1.0"?>
<package format="3">
  <name>arduino_mecanum_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 serial bridge for Arduino Mega mecanum motor controller</description>
  <maintainer email="iljujjang@gmail.com">ilju</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
